# data-quality-kit

./: .coverage  .pre-commit-config.yaml  LICENSE.md  README.md  cli.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dqk/: cli.py  drift.py
dqk/checks/: __init__.py  base.py  completeness.py  distribution.py  label_quality.py  text_quality.py  uniqueness.py  validity.py
dqk/core/: __init__.py  dataset.py  loader.py  schema.py
dqk/scoring/: __init__.py  scorer.py
examples/: report.json  sample.csv
tests/: conftest.py  test_checks.py  test_dataset.py
